terraform/modules/shared/alb_base.tf
resource "aws_alb" "main" {
  name = "pydata-bigdatarepublic"
  subnets = aws_subnet.public.*.id
  security_groups = [
    aws_security_group.lb.id]
}


resource "aws_alb_listener" "jupyter_redirect" {
  load_balancer_arn = aws_alb.main.arn
  port = 80
  protocol = "HTTP"

    default_action {
    type             = "fixed-response"

    fixed_response {
        content_type = "text/plain"
        message_body = "HTTP Error 404: Please provide username"
        status_code  = 404
    }
  }
}
